# auction_sim

./: .gitignore  .ocamlformat  README.md  auction_sim.opam  dune-project  results.csv
.github/workflows/: ocaml.yml
lib/: auction.ml  auction.mli  bidder.ml  bidder.mli  dune  strategy.ml  strategy.mli
test/: dune  test.ml
