opam-version: "2.0"
name: "auction_sim"
version: "0.1.0"

maintainer: "cjarmaly@gmail.com"
authors: "Christian Armaly"
license: "MIT"
homepage: "https://github.com/cjarmaly/auction_sim"
bug-reports: "https://github.com/cjarmaly/auction_sim/issues"
dev-repo: "git+https://github.com/cjarmaly/auction_sim.git"

depends: [
  "ocaml" {>= "5.1.0"}
  "dune"
  "core"
  "ounit2"
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
